--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <br />
     <div id="tablazat">
       <table style="width: 70%; text-align: center">
-        <th rowspan="2">Üzemanyag szerint</th>
+        <th rowspan="3">Üzemanyag szerint</th>
         <td>Benzin</td>
         <td>Dízel</td>
         <td>Elektromos</td>
@@ -37,6 +37,29 @@
             <th>Első tulajdonosok százalékos aránya</th>
             <td id="szazalek" colspan="6">120%</td>
         </tr>
+        <tr>
+            <th>Rendszámok megoszlása</th>
+            <td colspan="1">
+                Régi rendszám
+            </td>
+            <td colspan="2">
+                Új rendszám
+            </td>
+        </tr>
+        <tr>
+            <th rowspan="1"></th>
+            <td>
+                asdasd
+            </td>
+            <td>
+                asdasdasd
+            </td>
+        </tr>
+        <tr>
+            <th>Melyik a népszerűbb?</th>
+            <td colspan="3"></td>
+        </tr>
+
       </table>
     </div>
   </body>
