--- a/index.html
+++ b/index.html
@@ -19,48 +19,66 @@
           <option value="elektromos">Elektromos</option>
         </select>
       </h1>
+      <h1>Első tulajdonos?: <input type="checkbox" id="elsotulajdonos"></h1>
+      <h1>
+        Ajtók száma: 
+        <br>
+        <span>
+            3 ajtó
+            <input type="radio" name="ajtok" id="3ajtos">
+        </span> 
+        <br>
+        <span>
+            5 ajtó
+            <input type="radio" name="ajtok" id="5ajtos" checked="true"> 
+        </span>
+    </h1>
       <button onclick="Tarol()">Tárol</button>
+      <button onclick="Statisztika()">Statisztika</button>
     </div>
-    <br />
+
+    <br/>
     <div id="tablazat">
       <table style="width: 70%; text-align: center">
-        <th rowspan="3">Üzemanyag szerint</th>
-        <td>Benzin</td>
-        <td>Dízel</td>
-        <td>Elektromos</td>
+        <th rowspan="2">Üzemanyag szerint</th>
+        <td colspan="2">Benzin</td>
+        <td colspan="2">Dízel</td>
+        <td  colspan="2">Elektromos</td>
         <tr>
-          <td>1</td>
-          <td>20</td>
-          <td>30</td>
+            <td colspan="2" id="benzinszam"></td>
+            <td colspan="2" id="diselszam"></td>
+            <td colspan="2" id="elektromosszam"></td>
         </tr>
         <tr>
             <th>Első tulajdonosok százalékos aránya</th>
-            <td id="szazalek" colspan="6">120%</td>
+            <td id="szazalek" colspan="6"></td>
         </tr>
         <tr>
             <th>Rendszámok megoszlása</th>
-            <td colspan="1">
+            <td colspan="3">
                 Régi rendszám
             </td>
-            <td colspan="2">
+            <td colspan="3">
                 Új rendszám
             </td>
         </tr>
         <tr>
             <th rowspan="1"></th>
-            <td>
+            <td colspan="3" id="regirendszam">
                 asdasd
             </td>
-            <td>
+            <td colspan="3" id="ujrendszam">
                 asdasdasd
             </td>
         </tr>
         <tr>
             <th>Melyik a népszerűbb?</th>
-            <td colspan="3"></td>
-        </tr>
+            <td colspan="6" id="nepszerubb"></td>
+        </tr>        
 
       </table>
     </div>
   </body>
 </html>
+
+<script src="assets/js/js.js"></script>
